# twaice-rte-c-rate

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  mypy.ini  pyproject.toml
example/: data_sample.csv  notebook.ipynb
scripts/: serve.py
twaice_rte/: .env.example
twaice_rte/app/: main.py  worker.py
twaice_rte/app/api/: __init__.py
twaice_rte/app/api/v1/: __init__.py  metrics.py
twaice_rte/app/api/v1/endpoints/: metrics.py
twaice_rte/app/core/: celery_app.py  config.py  task_queue.py
twaice_rte/app/models/: metrics.py
twaice_rte/app/worker/: __init__.py
twaice_rte/libs/: metrics.py
